# libkrun

./: .gdb_history  Cargo.toml  Makefile  build_on_krunvm.sh  out.txt
examples/: chroot_vm.c
examples/gtk_display/src/: display_loop.rs  main.rs
include/: libkrun.h
init/: init.c
src/arch/src/x86_64/: interrupts.rs
src/devices/: Cargo.toml
src/devices/src/: lib.rs
src/devices/src/legacy/: serial.rs
src/devices/src/virtio/: device.rs  iovec.bak  iovec.rs  mmio.rs  mod.rs  queue.rs
src/devices/src/virtio/console/: console_control.rs  device.rs  event_handler.rs  irq_signaler.rs  mod.rs  port.rs  port_io.rs  port_rx.rs  port_tx.rs  process_rx.rs  process_tx.rs
src/devices/src/virtio/gpu/: device.rs  display_event.rs  mod.rs  protocol.rs  sdl_display.rs  virtio_gpu.rs  worker.rs
src/devices/src/virtio/net/: device.rs  event_handler.rs  mod.rs  passt.rs  persist.rs  tap.rs  test_utils.rs
src/devices/src/virtio/vsock/: tcp.rs
src/dumbo/: Cargo.toml
src/dumbo/src/tcp/: connection.rs  endpoint.rs
src/libkrun/: Cargo.toml
src/libkrun/src/: lib.rs
src/mmds/: Cargo.toml
src/mmds/src/: ns.rs  token.rs
src/rate_limiter/: Cargo.toml
src/rate_limiter/src/: lib.rs
src/rutabaga_gfx/src/: rutabaga_core.rs  rutabaga_utils.rs
src/utils/src/: lib.rs  rand.rs  time.rs
src/utils/src/linux/: epoll.rs
src/utils/src/net/: mac.rs  mod.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  lib.rs  resources.rs  vm_log.rs
tests/: run.sh
tests/test_cases/: Cargo.toml
tests/test_cases/src/: lib.rs  test_tsi_tcp_guest_connect.rs
(+5 files in other folders)
