[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[features]
tee = []
amd-sev = ["tee"]

[dependencies]
bitflags = "1.2.0"
crossbeam-channel = "0.5"
env_logger = "0.9.0"
libc = ">=0.2.39"
log = "0.4.0"
nix = "0.24.1"
rand = "0.8.5"
vm-memory = { version = "0.8.0", features = ["backend-mmap", "backend-bitmap"] }

arch = { path = "../arch" }
utils = { path = "../utils" }
polly = { path = "../polly" }

# virtio net specific dependecies:
# TODO: cond compile iff virtio net
dumbo = { path = "../dumbo" }
mmds = { path = "../mmds" }
rate_limiter = { path = "../rate_limiter"}
snapshot = {path = "../snapshot"}
net_gen = { path = "../net_gen" }


virtio-bindings = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../hvf" }
lru = ">=0.9"
