[package]
name = "rate_limiter"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
bench = false

[dependencies]
timerfd = "1.5.0"
versionize = "0.1.10"
versionize_derive = "0.1.5"
log = "0.4.0"
env_logger = "0.9.0"
snapshot = { path = "../snapshot" }
utils = { path = "../utils" }
